<resources>
    <string name="app_name">FirebaseAuthLearn</string>

    <string name="loading">Loading ...</string>
    <string name="firebase_logo_and_name">Firebase logo and name</string>
    <string name="email_and_password_titletext">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_acount">Create Acount</string>
    <string name="verify_email">Verify email</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_email_auth">EmailAuth</string>
    <string name="firebase_user_id">Firebase User ID:</string>
</resources>
